@@ -3,4 +3,5 @@
 src/main.c
 src/callbacks.c
 src/gpdftext.glade
+gpdftext.desktop.in
 
